<resources>
    <string name="app_name">HomePets</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="creaza_cont">Creează cont</string>
    <string name="introduceti_adresa_de_email">Introduceti adresa de email</string>
    <string name="login">Login</string>
    <string name="nume">Nume</string>
    <string name="prenume">Prenume</string>
    <string name="adresa">Adresa</string>
    <string name="parolaInregistrare">Parola</string>
    <string name="inregistrare">Inregistrare</string>
    <string name="animalutele_mele">Animalele mele</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general">General</string>
    <string name="vaccinuri">Vaccinuri</string>
    <string name="interventii">Interventii</string>
    <string name="deparazitari">Deparazitari</string>
    <string name="email">Email</string>
    <string name="telefon">Telefon</string>
    <string name="parola">Parola</string>
    <string name="am_deja_cont">Am deja cont</string>
    <string name="sunt_deja_membru">Sunt deja membru</string>
    <string name="inregistreaz_te">Inregistrează-te</string>
    <string name="fii_parte_din_comunitatea_noastr">Fii parte din comunitatea noastră</string>
    <string name="inregistrareEfectuata">Inregistrare efectuată</string>
    <string name="adauga">Adauga</string>
    <string name="acas">Acasă</string>
    <string name="n_scut">Născut</string>
    <string name="notite">Notite</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="camp_obligatoriu_nume">Nume invalid!</string>
    <string name="camp_obligatoriu_prenume">Prenumele este prea scurt!</string>
    <string name="camp_obligatoriu">Campul nu este valid</string>
    <string name="camp_obligatoriu_telefon">Numarul de telefon trebuie sa aiba minim 10 cifre</string>
    <string name="camp_obligatoriu_parola">Parola trebuie sa aiba minim 8 caractere</string>
    <string name="camp_obligatoriu_email">Email invalid</string>
    <string name="programeaza_te">Programeaza-te</string>
    <string name="servicii">Servicii</string>
    <string name="finalizeaza_programarea">Finalizeaza programarea</string>
    <string name="programarile_mele">Programarile mele</string>
    <string name="home">Home</string>
    <string name="my_profile">Profilul meu</string>
    <string name="acasa">Acasa</string>
    <string name="logout">Logout</string>
    <string name="saloane_nregistrate">Saloane înregistrate</string>
    <string name="adopta">Adopta</string>
    <string name="info_adoptie1">1. Adoptatorul se angajeaza:</string>
    <string name="info_adoptie2">a. sa microcipeze animalul, sa-l inregistreze in Registrul Electronic al Cainilor
cu Stapan (RECS), sa ii faca carnet de sanatate unde vor fi trecute toate
procedurile medicale pe toata durata de viata si sa-l vaccineze anti-rabic.</string>
    <string name="info_adoptie3">b. sa trateze animalul cu blandete, sa ii ofere hrana, apa, libertate de miscare
si tratament medical in caz de boala.</string>
    <string name="info_adoptie4">c. sa ia toate masurile necesare ca animalul sa nu fuga.</string>
    <string name="info_adoptie5">d. sa deparaziteze animalul intern / extern cel putin o data pe an.</string>
    <string name="info_adoptie6">2. Adoptatorul se obliga sa nu instraineze animalul fara acordul expres al
donatorului. In cazul nerespectarii acestui punct, animalul revine de drept
donatorului care va urma pasii de la punctul 3.</string>
    <string name="info_adoptie7">3. In cazul in care adoptatorul nu mai are posibilitatea sau nu mai doreste sa tina
animalul, acesta este obligat sa contacteze donatorul pentru ca impreuna sa
incerce gasirea altui stapan. In cazul in care nu se poate gasi un nou stapan
pentru animal, donatorul se angajaza sa suporte cheltuielile legate de
eutanasierea animalului la un cabinet veterinar cu respectarea legislatiei in
2 / 2
vigoare. Ambele parti convin ca abandonul animalului indiferent de
circumstante nu reprezinta o solutie!</string>
    <string name="info_adoptie8">4. Donatorul va primi poze cu animalul periodic, la 6 luni, pe toata durata de viata a
animalului.</string>
    <string name="info_adoptie9">5. Adoptatorul se obliga sa castreze animalul la varsta de 6 luni (femela), respectiv 1
an (masculul), daca acest lucru nu s-a realizat inaintea adoptiei. Donatorul va
consilia adoptatorul pentru realizarea aceastei operatii gratuit prin intermediul unor
asociatii de protectia animalelor. Daca adoptatorul nu efectueaza aceasta
procedura obligatorie prin lege la varsta specificata mai sus, animalul revine de
drept donatorului care va urma pasii de la punctul 3.</string>
    <string name="info_adoptie10">6. Donatorul va fi informat imediat daca animalul moare sau se pierde.</string>
    <string name="info_adoptie11">7. Adoptatorul ia la cunostinta in mod explicit urmatoarele articole din acte legislative
referitoare la protectia si detinerea animalelor:</string>
    <string name="info_adoptie12">Legea 258/2013</string>
    <string name="info_adoptie13">Art. 8, Alin. 4: Proprietarii sau detinatorii de caini, persoane fizice sau
persoane juridice, au obligatia identificarii acestora prin microcipare.</string>
    <string name="info_adoptie14">Art. 13 Alin. 2: Este obligatorie sterilizarea câinilor cu sau fără stăpân
aparţinând rasei comune.</string>
    <string name="info_adoptie15">Art. 14 Alin. 1 Lit. b: Nerespectarea dispozitiilor de mai sus se sanctioneaza, cu
amendă de la 5.000 lei la 10.000 lei.</string>
    <string name="info_adoptie16">Ordinului Preşedintelui ANSVSA nr. 1/2014</string>
    <string name="info_adoptie17">Art. 4 Alin. 2: Cainii neidentificati si neinregistrati aflati in spatiile publice
sunt considerati caini fara stapan si sunt tratati conform prevederilor legislatiei
specifice in vigoare.</string>
    <string name="info_adoptie18">Anexa 3: Vaccinarea contra rabiei a cainilor si a pisicilor in varsta de peste 3
luni in Romania este obligatorie.</string>
    <string name="info_adoptie19">Legea 205/2004</string>
    <string name="info_adoptie20">Art. 26 Alin 2: Abandonarea și/sau alungarea unui animal a cărui existență depinde
de îngrijirea omului se sancționează cu amendă de la 1.000 lei la 3.000 de lei.</string>
    <string name="sunt_de_acord">Am luat la cunostinta!</string>
    <string name="inchide">Inchide</string>
    <string name="animal_sters">AnimalSters</string>
    <string name="trimite">Trimite</string>
    <string name="nume_animal">Nume Animal</string>
    <string name="varsta">Varsta</string>
    <string name="centru_adoptie">Centru Adoptie</string>
    <string name="rasa">Rasa</string>
    <string name="adoptiile_mele">Adoptiile mele</string>
    <string name="nume_salon">Nume salon</string>
    <string name="nume_serviciu">Nume serviciu: </string>
    <string name="data_programare">Data programare: </string>
    <string name="nume_animmal">Nume animal: </string>
    <string name="ora_programare">Ora programare: </string>
    <string name="categorie_animal">Categorie animal</string>
</resources>