<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoAdoptie"
    android:background="@color/white"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/adoptie_tv1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie1"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie2"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie3"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie4"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv5"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie5"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv6"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie6"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv7"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie7"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv8"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie8"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv9"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie9"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv10"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie10"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv11"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie11"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv12"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie12"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv13"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie13"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv14"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie14"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv15"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie15"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv16"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie16"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv17"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie17"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv18"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie18"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv19"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie19"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/adoptie_tv20"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:text="@string/info_adoptie20"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@+id/adoptie_tv19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        <CheckBox
            android:id="@+id/check_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/sunt_de_acord"
            app:layout_constraintTop_toBottomOf="@+id/adoptie_tv20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/check_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
        <Button
            android:id="@+id/btninfo_Adopt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adopta"
            android:clickable="false"
            />
        <Button
        android:id="@+id/btninfo_Close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inchide"
        android:clickable="false"
        app:layout_constraintTop_toBottomOf="@+id/check_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>