<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2DAED6"
    android:scrollbars="vertical"
    tools:context=".SignInActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/tvInregistrare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/fii_parte_din_comunitatea_noastr"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tilNume"

        />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:boxBackgroundMode="none"
            app:hintTextColor="#0B5770"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietNume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nume"


                android:textColor="#0C556C"
                android:textColorHighlight="#1A86A8"
                android:textColorHint="#0C556C"
                android:textColorLink="#1A86A8" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrenume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="3dp"
            app:boxBackgroundMode="none"
            app:hintTextColor="#0B5770"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilNume">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPrenume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prenume"
                android:textColor="#0C556C"
                android:textColorHighlight="#1A86A8"
                android:textColorHint="#0C556C"
                android:textColorLink="#1A86A8" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAdresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="3dp"
            app:boxBackgroundMode="none"
            app:hintTextColor="#0B5770"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPrenume">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAdresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/adresa"
                android:textColor="#0C556C"
                android:textColorHighlight="#1A86A8"
                android:textColorHint="#0C556C"
                android:textColorLink="#1A86A8" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailInregistrare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="3dp"
            app:boxBackgroundMode="none"
            app:hintTextColor="#0B5770"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAdresa">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmailInregistrare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#0C556C"
                android:textColorHighlight="#1A86A8"
                android:textColorHint="#0C556C"
                android:textColorLink="#1A86A8" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTelefon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="3dp"
            app:boxBackgroundMode="none"
            app:hintTextColor="#0B5770"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilEmailInregistrare">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietTelefon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"

                android:hint="@string/telefon"
                android:textColor="#0C556C"
                android:textColorHighlight="#1A86A8"
                android:textColorHint="#0C556C"
                android:textColorLink="#1A86A8" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilParola"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="3dp"
            app:boxBackgroundMode="none"
            app:hintTextColor="#0B5770"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilTelefon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietParola"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/parola"

                android:inputType="textPassword"
                android:textColor="#0C556C"
                android:textColorHighlight="#1A86A8"
                android:textColorHint="#0C556C"
                android:textColorLink="#1A86A8"/>
        </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:id="@+id/tvContExistent"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginLeft="7dp"

            android:layout_marginTop="10dp"
            android:fontFamily="@font/annie_use_your_telescope"
            android:onClick="goToLogin"
            android:text="@string/sunt_deja_membru"
            android:textColor="#444747"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilParola" />

        <Button
            android:id="@+id/btnInregistrare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"

            android:layout_marginRight="7dp"
            android:layout_weight="1"
            android:fontFamily="@font/annie_use_your_telescope"
            android:onClick="inregistrareCuSuccess"
            android:text="@string/inregistreaz_te"
            android:textColor="#444747"
            android:textSize="18dp"
            app:layout_constraintEnd_toStartOf="@id/tvContExistent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilParola" />
    </LinearLayout>

</LinearLayout>
</ScrollView>